--- a/src/app/components/teacher-dashboard/create-exam/create-exam.component.html
+++ b/src/app/components/teacher-dashboard/create-exam/create-exam.component.html
@@ -131,7 +131,7 @@
                                 <strong> Exam not found. </strong>
                             </p>
                         </div>
-                        <div class="mt-3" *ngFor="let exam of exams">
+                        <div class="mt-3" *ngFor="let exam of exams.slice().reverse()">
                             <div class="card exams-card mb-5">
                                 <div class="card-header exams-card-header">
 
@@ -187,7 +187,7 @@
             <h5 class="text-center mt-3"> <strong> REGISTERED STUDENTS </strong> </h5>
             <div class="modal-body text-center">
                 <div class="container">
-                    <div *ngFor="let registeredStudent of selectedExamRegisteredStudents" class="student-card mb-5">
+                    <div *ngFor="let registeredStudent of selectedExamRegisteredStudents.slice().reverse()" class="student-card mb-5">
                         <div class="card registered-student-card student-card">
                             <div class="card-body">
                                 <h5> Student Number</h5>
@@ -314,8 +314,7 @@
                         </thead>
                         <tbody>
                             <tr class="table-secondary"
-                                *ngFor="let registeredStudent of selectedExamRegisteredStudents">
-
+                                *ngFor="let registeredStudent of selectedExamRegisteredStudents.slice().reverse()">
 
                                 <td>{{ registeredStudent.no }}
 
