--- a/src/app/components/teacher-dashboard/view-students/view-students.component.html
+++ b/src/app/components/teacher-dashboard/view-students/view-students.component.html
@@ -315,7 +315,7 @@
                 </ul>
 
                 <div>
-                    <div *ngFor="let message of selectedStudentMessages">
+                    <div *ngFor="let message of selectedStudentMessages.slice().reverse()">
                         <div class="card mb-3">
                             <div class="card-header">
                                 <strong> {{ message.date | date: 'dd.MM.yyyy HH:mm:ss'}} </strong>
@@ -352,22 +352,22 @@
                 <h5 class="modal-title" id="examsModalLabel"> <strong> Registered Exams </strong></h5>
             </div>
             <div class="modal-body">
-                <h5> <strong> Student Information </strong> </h5>
-                <ul class="list-unstyled">
-                    <li>
-                        <strong>No:</strong> {{selectedStudentNo}}
-                    </li>
-                    <li>
-                        <strong>Email:</strong> {{selectedStudentEmail}}
-                    </li>
-                    <li>
-                        <strong>Name:</strong> {{selectedStudentName}}
-                    </li>
-                    <li>
-                        <strong>Surname:</strong> {{selectedStudentSurname}}
-                    </li>
-                </ul>
-
+                    <h5> <strong> Student information </strong> </h5>
+                    <ul>
+                        <li>
+                            <strong>No: </strong> {{selectedStudentNo}}
+                        </li>
+                        <li>
+                            <strong>Email: </strong> {{selectedStudentEmail}}
+                        </li>
+                        <li>
+                            <strong>Name: </strong> {{selectedStudentName}}
+                        </li>
+                        <li>
+                            <strong>Surname: </strong> {{selectedStudentSurname}}
+                        </li>
+                    </ul>
+  
                 <div>
                     <table class="table table-bordered ">
                         <thead>
@@ -377,7 +377,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr class="table-light" *ngFor="let exam of selectedStudentExams">
+                            <tr class="table-light" *ngFor="let exam of selectedStudentExams.slice().reverse()">
                                 <td>{{ exam.name }} {{ exam.type }}</td>
                                 <td>{{ exam.score }}</td>
                             </tr>
