--- a/src/app/components/student-home/student-home.component.html
+++ b/src/app/components/student-home/student-home.component.html
@@ -1,1 +1,250 @@
-<p>student-home works!</p>
+<div *ngIf="userInfo" class="d-flex justify-content-center">
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <div *ngIf="myInfos" class="card border border-dark  text-center">
+                    <div class="card-header bg-dark text-white ">
+                        <h3>STUDENT HOME</h3>
+                        <p class="mb-0"> Welcome <strong>{{ myInfos.name }} {{ myInfos.surname }} </strong> </p>
+                    </div>
+                    <div class="card-body bg-secondary bg-opacity-25 text-center">
+                        <div>
+
+                            <div class="mb-3">
+                                <strong>Student No:</strong> {{ myInfos.no }}
+                            </div>
+                            <div class="mb-3">
+                                <strong>Email:</strong> {{ myInfos.email }}
+                            </div>
+                            <div class="mb-3">
+                                <strong>Password:</strong> {{ myInfos.password }}
+
+                            </div>
+
+                            <div class="mb-3">
+                                <strong style="color:red;">Absenteeism: <span style="color:red;"> {{ myInfos.absenteeism
+                                        }}</span> </strong>
+                            </div>
+                            <button class="btn btn-sm btn-primary" data-toggle="modal"
+                                data-target="#changePasswordModal">Change Password</button>
+
+
+                            <div *ngIf="changePasswordMessage" class="container mt-3">
+                                <div class="changePasswordMessage"
+                                    [ngClass]="changePasswordMessageType === 'success' ? 'alert alert-warning' : (changePasswordMessageType === 'danger' ? 'alert alert-danger' : '')">
+                                    <strong>{{ changePasswordMessage }}</strong>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-footer text-white bg-dark text-center">
+                        <button class="btn btn-sm btn-danger" (click)="logout()">Logout</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+<div *ngIf="myInfos" class="container mt-3 mb-3">
+    <div class="container mt-3 mb-3">
+        <div class="row justify-content-center">
+            <div class="col-8 col-md-6 col-lg-5 col-xl-4 mt-4 ">
+                <div *ngIf="myExams" class="card border-secondary" style="max-height: 380px;  ">
+                    <div class="card-header bg-dark bg-opacity-75 text-white text-center">
+                        <strong> MY EXAMS </strong>
+                        <i class="fa-solid fa-file-signature"></i>
+                        &nbsp;
+                        <strong style="color: white;"> ({{ myExams.length }}) </strong>
+
+                    </div>
+                    <div class="bg-secondary bg-opacity-25" style="overflow-y: auto;">
+                        <div class="container mt-3">
+                            <table class="table table-bordered table-striped text-center">
+                                <thead class="bg-primary text-white">
+                                    <tr class="table-dark">
+                                        <th>Name</th>
+                                        <th>Score</th>
+                                        <th>Details</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr *ngFor="let exam of myExams.slice().reverse()">
+                                        <td>{{ exam.name }} {{ exam.type }}</td>
+                                        <td>{{ exam.score }}</td>
+                                        <td>
+                         
+                                            <i [ngbPopover]="popoverContent" popoverTitle="{{exam.name}} {{exam.type}}" 
+                                            class="fa-solid fa-circle-info fa-lg" style="color: #2061cf;">
+                                            </i>
+
+                                            <ng-template #popoverContent>
+                                                <strong>Date:</strong> {{ exam.date.day + '.' + exam.date.month + '.' + exam.date.year }}<br>
+                                                <strong>Time:</strong> {{ (exam.time.hour < 10 ? '0' + exam.time.hour : exam.time.hour) + ':' +
+                                                (exam.time.minute < 10 ? '0' + exam.time.minute : exam.time.minute) }}<br>
+                                                <strong>Number of Questions:</strong> {{ exam.numberOfQuestions }}<br>
+                                                <strong>Duration:</strong> {{ exam.duration }}<br>
+                                                <strong>Registered Students:</strong> {{ exam.registeredStudents.length }}
+                                            </ng-template>
+                                            
+                                            <!-- 
+
+                                            <a data-toggle="modal" [href]="'#examDetailsModal' + exam._id" role="button"
+                                                aria-expanded="false" aria-controls="collapseExample">
+                                                <i class="fa-solid fa-circle-info fa-lg" style="color: #2061cf;"></i>
+                                            </a> 
+
+                                            -->
+                                        </td>
+                                    </tr>
+                                    <tr *ngIf="myExams.length === 0">
+                                        <td colspan="3" class="text-center"><strong>Exam not found</strong></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-8 col-md-6 col-lg-5 col-xl-4 mt-4">
+                <div *ngIf="myInfos.messages" class="card border border-primary" style="max-height: 380px; ">
+                    <div class="card-header bg-primary text-white text-center">
+                        <strong>INCOMING MESSAGES </strong>
+                        <i class="fa-regular fa-message" style="color: white;"></i>
+                        &nbsp;
+                        <strong style="color: white;"> ({{ myInfos.messages.length }}) </strong>
+                    </div>
+                    <div class="card-body bg-secondary bg-opacity-25 text-center" style="overflow-y: auto;">
+                        <div *ngFor="let message of myInfos.messages.slice().reverse()"
+                            class="card border border-primary mb-4">
+                            <div class="card-header bg-primary text-white text-start">
+                                <strong>{{ message.date | date: 'dd.MM.yyyy HH:mm:ss' }}</strong>
+                            </div>
+                            <div class="card-body">
+                                {{ message.message }}
+                            </div>
+                        </div>
+                        <span *ngIf="myInfos.messages.length === 0">
+                            <strong>Message not found</strong>
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-8 col-md-6 col-lg-5 col-xl-4 mt-4">
+                <div *ngIf="announcements" class="card border border-danger" style="max-height: 380px;">
+                    <div class="card-header bg-danger text-white text-center">
+                        <strong> ANNOUNCEMENTS </strong>
+                        <i class="fa-solid fa-bullhorn" style="color: white;"></i>
+                        &nbsp;
+                        <strong style="color: white;"> ({{ announcements.length }}) </strong>
+                    </div>
+                    <div class="card-body bg-secondary bg-opacity-25 text-center" style="overflow-y: auto;">
+                        <div *ngFor="let announcement of announcements.slice().reverse()">
+                            <div class="card border border-danger announcements-card mb-4">
+                                <div class="card-header bg-danger text-white announcements-card-header">
+                                    <div class="container text-start">
+                                        <strong>{{ announcement.title }}</strong>
+                                    </div>
+                                </div>
+                                <div class="card-body ">
+                                    {{ announcement.announcement }}
+                                </div>
+                                <div class="card-footer border  text-end">
+                                    <strong>{{ announcement.date | date: 'dd.MM.yyyy HH:mm:ss'}}</strong>
+                                </div>
+                            </div>
+                        </div>
+                        <span *ngIf="announcements.length === 0">
+                            <strong>Announcement not found</strong>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div *ngIf="myInfos" class="modal fade" id="changePasswordModal" tabindex="-1" role="dialog"
+    aria-labelledby="changePasswordModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="changePasswordModalLabel"> <strong> Change Password </strong></h5>
+            </div>
+
+            <div class="modal-body text-center">
+                <div class="container">
+                    <h5 class="text-center">Current Password</h5>
+                    <p><strong>{{ myInfos.password }}</strong></p>
+                    <i class="fa-solid fa-arrow-down fa-xl" style="color: #2f5dac;"></i>
+                    <form [formGroup]="changePasswordForm" (ngSubmit)="changePassword()">
+                        <div class="mt-3 d-flex justify-content-center">
+                            <input
+                                [ngClass]="{'success-border': !formControls['password'].hasError('required') && !formControls['password'].hasError('minlength') && inputPassword.value.trim().length > 5}"
+                                #inputPassword style="width: 200px;" type="text" formControlName="password"
+                                id="password" required maxlength="20" class="form-control text-center"
+                                placeholder="New Password">
+
+                        </div>
+                        <div class="text-danger"
+                            *ngIf="formControls['password'].hasError('required') || formControls['password'].hasError('minlength') || !(inputPassword.value.trim().length > 5) ">
+                            <span> <strong> Password required and must be at least 6 characters </strong> </span>
+                        </div>
+                        <div class="mt-3">
+                            <button [disabled]=" editErrors(inputPassword) || changePasswordForm.invalid" type="submit"
+                                class="btn btn-primary">Change</button>
+                        </div>
+                    </form>
+                </div>
+
+
+            </div>
+            <div class="modal-footer mt-3">
+                <button type="button" class="btn btn-secondary active" data-dismiss="modal">Close</button>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<!--
+
+<div *ngFor="let exam of myExams.slice().reverse()" class="modal fade" [id]="'examDetailsModal' + exam._id"
+    tabindex="-1" role="dialog" aria-labelledby="examDetailsModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="examDetailsModalLabel"> <strong> Exam Details </strong></h5>
+            </div>
+
+            <div class="modal-body text-center">
+                <div class="container">
+                    <h5 class="text-center"> <strong> {{exam.name}} {{exam.type}} </strong></h5>
+
+                    <i class="fa-solid fa-arrow-down fa-xl" style="color: #2f5dac;"></i>
+                    <div class="card-body mt-2">
+                        <strong>Date:</strong> {{ exam.date.day + '.' + exam.date.month + '.' + exam.date.year }}<br>
+                        <strong>Time:</strong> {{ (exam.time.hour < 10 ? '0' + exam.time.hour : exam.time.hour) + ':' +
+                            (exam.time.minute < 10 ? '0' + exam.time.minute : exam.time.minute) }}<br>
+                            <strong>Question Type:</strong> {{ exam.questionType }}<br>
+                            <strong>Number of Questions:</strong> {{ exam.numberOfQuestions }}<br>
+                            <strong>Duration:</strong> {{ exam.duration }}<br>
+                            <strong>Registered Students:</strong> {{ exam.registeredStudents.length }}
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer mt-3">
+                <button type="button" class="btn btn-secondary active" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+-->
